apps/node-app/overlays/dev-test/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-app
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "0"
  labels:
    app.kubernetes.io/name: node-app
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: node-app
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: node-app
    spec:
      containers:
        - name: node-app
          image: ghcr.io/jacekzubielik/node-app:2.1.13
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 3000
          resources:
            requests:
              memory: "256Mi" 
              cpu: "250m"    # 500milliCPUs (1/2 CPU)
            limits:
              memory: "512Mi"
              cpu: "500m"
